<resources>

    <string name="app_name">Go4Lunch</string>

    <!-- Added 04/06/21 for integration of facebook login -->
    <string name="facebook_application_id">3512562515510897</string>
    <string name="fb_login_protocol_scheme">fb3512562515510897</string>
    <string name="info_no_username_found">Empty user name</string>

    <!-- Added for bottom navigation menu-->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_work">Workmates</string>
    <string name="header_title">Go4Lunch</string>
    <string name="my_account_link">MY ACCOUNT LINK</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="login_name">John SMITH</string>
    <string name="content_description_favorite">description_favorite</string>
    <string name="favorite">Search ...</string>
    <string name="bottom_navigation_work">Workmates</string>

    <!-- strings for Workmates view -->
    <string name="hello_blank_fragment">workmateslist</string>

    <!-- Preference Default ViewPager -->
    <string name="default_screen">Ecran par défaut</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">View by default</string>

    <!-- Sync Preferences -->


    <string name="sync_title">Sync in real time</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="topAppBar_title">Collègues</string>
    <string name="nameOfRestaurant">French - 12 rue du Faubourg Poissonière</string>
    <string name="distanceOfRestaurant">100m</string>
    <string name="openTimeOfRestaurant">Open until 7pm</string>
    <string name="titleOfRestaurant">Le Zinc</string>
    <string name="numberOfWorkmates">(10)</string>
    <string name="numberOfLike">3</string>
    <string name="labelForOpeningHours">\"Ouvert : \"</string>
    <string name="connection_succeed">Success</string>
    <string name="error_authentification_canceled">Abord connect</string>
    <string name="error_no_network">Lan fail</string>
    <string name="error_unknow">Fail</string>
    <string name="default_notification_channel_id" >default channel</string>


    <!-- login screen -->
    <string name="facebook_btn_str">Sign in with Facebook</string>
    <string name="google_btn_str">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>


    <!-- menu top -->
    <string name="menu_title">I\'m hungry!</string>




    <string name="is_eating_txt"> is eating </string>
    <string name="restaunochoice">\" hasn\'t decided yet\"</string>


    <!-- main screen -->
    <string name="no_fav_msg">No favorite restaurant to show</string>

    <!-- screen detail restaurant -->
    <string name="no_url_string">No url !</string>
    <string name="no_phone_string">No phone number !</string>
    <string name="is_joining_txt">is joining</string>

    <string name="like_delete_msg">Delete like</string>
    <string name="like_add_msg">Add like</string>

    <string name="delete_fav_msg">Delete restaurant</string>
    <string name="add_fav_msg">Save restaurant</string>

    <!-- screen settings -->
    <string name="language_mode">Notifications On/Off : </string>
    <string name="descriptionForRestaurantImage">no data</string>
    <string name="descriptionForWorkMatesIcon">no data</string>
    <string name="cancel_btn_alert">cancel</string>
    <string name="btn_ok_dialogalert">ok</string>
    <string name="restaurant_notchoice">\" hasn\'t decided yet\"</string>
    <string name="setting_zoom_title">Map zoom</string>
    <string name="setting_off_notification">Don\'t receive notification</string>
    <string name="setting_on_notification">Receive notification at 12:00</string>
    <string name="search_abord">Search canceled</string>
    <string name="query_error_autocomplete">Try again with 4 caracters</string>
    <string name="title_formapview">I\'m Hungry!</string>
    <string name="title_forlistview">I\'m Hungry!</string>
    <string name="title_forworkmate">Available workmates</string>
    <string name="notification_disable_msg">Notification disable</string>
    <string name="notification_enable_msg">Notification enabled</string>
    <string name="title_dialog_alert">Search result</string>
    <string name="no_data">no data</string>
    <string name="msg_autocomplete">check another time</string>
    <string name="login_abord_msg">abord</string>
    <string name="error_autocomplete">Error autocomplete</string>
    <string name="cancel_autocomplete">Aborded search</string>
    <string name="toast_no_restaurant">no restaurant selected</string>
    <string name="back_btn_text">Return</string>
    <string name="ruleforquery">mini 4 caracters</string>


</resources>