<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/group1"
        >

        <item
            android:id="@+id/activity_main_drawer_news3"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/my_account_link" />

    </group>


    <group

        android:id="@+id/group2"
        android:color="#ff8a50"
        >

        <item
            android:id="@+id/activity_main_drawer_news"
            android:icon="@drawable/ic_map"
            android:title="@string/your_lunch" />

        <item
            android:id="@+id/activity_main_drawer_news12"
            android:icon="@drawable/ic_work"
            android:title="@string/settings" />
        <item
            android:id="@+id/activity_main_drawer_news4"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />


    </group>


</menu>